--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="module-header">
                 <h2><i class="fas fa-chart-pie"></i> Dashboard Overview</h2>
                 <div class="header-actions">
-                    <button class="btn btn-primary" onclick="admin.refreshDashboard()">
+                    <button class="btn btn-primary" onclick="refreshDashboard()">
                         <i class="fas fa-sync-alt"></i> Làm Mới
                     </button>
                     <span id="dashboardLastUpdate" class="last-update"></span>
