--- a/index.html
+++ b/index.html
@@ -169,15 +169,15 @@
                     <thead>
                         <tr>
                             <th>STT</th>
-                            <th>IMEI</th>
-                            <th>IMEI V5</th>
+                            <th>Ngày Nhập</th>
                             <th>Dòng Máy</th>
                             <th>Dung Lượng</th>
                             <th>Màu Sắc</th>
+                            <th>IMEI</th>
+                            <th>IMEI V5</th>
                             <th>Giá Nhập</th>
-                            <th>Nhà CC</th>
-                            <th>Ngày Nhập</th>
-                            <th>Trạng Thái</th>
+                            <th>Nhà Cung Cấp</th>
+                            <th>Mô Tả Nhập</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
