--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
 
             <!-- Data Table -->
-            <div class="table-container">
+            <div class="table-responsive">
                 <table id="tonkhoTable" class="data-table">
                     <thead>
                         <tr>
@@ -244,7 +244,7 @@
             </div>
 
             <!-- Data Table -->
-            <div class="table-container">
+            <div class="table-responsive">
                 <table id="nhaphangTable" class="data-table">
                     <thead>
                         <tr>
@@ -327,7 +327,7 @@
             </div>
 
             <!-- Data Table -->
-            <div class="table-container">
+            <div class="table-responsive">
                 <table id="banhangTable" class="data-table">
                     <thead>
                         <tr>
@@ -379,7 +379,7 @@
             </div>
 
             <!-- Data Table -->
-            <div class="table-container">
+            <div class="table-responsive">
                 <table id="xuathuyTable" class="data-table">
                     <thead>
                         <tr>
@@ -475,7 +475,7 @@
                         </div>
                     </div>
 
-                    <div class="table-container">
+                    <div class="table-responsive">
                         <table class="data-table">
                             <thead>
                                 <tr>
@@ -511,7 +511,7 @@
                         <i class="fas fa-spinner fa-spin"></i> Đang tính toán...
                     </div>
                     
-                    <div class="table-container">
+                    <div class="table-responsive">
                         <table class="data-table">
                             <thead>
                                 <tr>
